src/test/resources/purescript_examples/failing/UnknownType.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith UnknownName\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n\n')
      PSTypeDeclarationImpl(TypeDeclaration)
        PSTypeAnnotationNameImpl(TypeAnnotationName)
          PSIdentifierImpl(identifier)
            PsiElement(identifier)('test')
            PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PSTypeImpl(Type)
          PSTypeAtomImpl(TypeAtom)
            PSTypeConstructorImpl(TypeConstructor)
              PSQualifiedImpl(Qualified)
                PSProperNameImpl(ProperName)
                  PsiElement(proper name)('Number')
                  PsiElement(whitespace)(' ')
          PsiElement(->)('->')
          PsiElement(whitespace)(' ')
          PSTypeImpl(Type)
            PSTypeAtomImpl(TypeAtom)
              PSTypeConstructorImpl(TypeConstructor)
                PSQualifiedImpl(Qualified)
                  PSProperNameImpl(ProperName)
                    PsiElement(proper name)('Something')
                    PsiElement(whitespace)('\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('test')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSObjectLiteralImpl(ObjectLiteral)
              PsiElement({)('{')
              PsiElement(})('}')
              PsiElement(whitespace)('\n')
